added background color

--- a/style.css
+++ b/style.css
@@ -22,4 +22,11 @@ body {
     min-height: 100vh;
     display: grid;
     place-items: center;
+    background-color: var(--main-background);
+}
+
+main {
+    background-color: var(--card-background);
+    display: grid;
+
 }
