added img and main

--- a/style.css
+++ b/style.css
@@ -23,11 +23,21 @@ body {
     display: grid;
     place-items: center;
     background-color: var(--main-background);
+    color: white;
 }
 
-main {
-    background-color: var(--card-background);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+img {
+    display: block;
+    max-width: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+  }
 
+main {
+    display: flex;
+  justify-content: space-between;
+  background-color: hsl(244, 38%, 16%);
+  margin: 0 10%;
+  border-radius: 6px;
+  overflow: hidden;
 }
