changed img design

--- a/style.css
+++ b/style.css
@@ -26,3 +26,10 @@ body {
     color: white;
     font-size: 15px;
 }
+
+img {
+  display: block;
+  object-fit: cover;
+  max-width: 100%;
+  opacity: 0.5;
+}
