--- a/style.css
+++ b/style.css
@@ -55,3 +55,11 @@ picture {
 .card-left {
   padding: 4rem;
 }
+
+.text-info > h1 {
+  font-size: 2.5rem;
+}
+
+.text-info > h1 > span {
+  color: var(--accent);
+}
