--- a/style.css
+++ b/style.css
@@ -54,12 +54,22 @@ picture {
 
 .card-left {
   padding: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .text-info > h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
+  margin-right: 1rem;
 }
 
 .text-info > h1 > span {
   color: var(--accent);
+}
+
+.text-info > p {
+  margin: 2rem 3rem 2rem 0;
+  color: var(--main-paragraph);
 }
