--- a/style.css
+++ b/style.css
@@ -28,16 +28,16 @@ body {
     font-size: 15px;
 }
 
-main {
+.container {
   display: flex;
   height: 446px;
   width: 1110px;
   background-color: var(--card-background);
-  margin: 10rem;
   border-radius: 0.5rem;
 }
 
 picture {
+  min-height: 100%;
   min-width: 50%;
   background-color: var(--accent);
   border-radius: 0 0.5rem 0.5rem 0;
@@ -46,10 +46,10 @@ picture {
 .overlay {
   height: 100%;
   width: 100%;
-  opacity: 0.75;
-  background-image: url("./images/image-header-desktop.jpg");
   mix-blend-mode: multiply;
+  opacity: 0.75;
   border-radius: 0 0.5rem 0.5rem 0;
+  background-image: url("./images/image-header-desktop.jpg");
 }
 
 .card-left {
@@ -63,7 +63,6 @@ picture {
 
 .text-info > h1 {
   font-size: 2rem;
-  margin-right: 2rem;
 }
 
 .text-info > h1 > span {
@@ -71,7 +70,6 @@ picture {
 }
 
 .text-info > p {
-  margin: 2rem 3rem 2rem 0;
   color: var(--main-paragraph);
 }
 
