--- a/style.css
+++ b/style.css
@@ -100,3 +100,17 @@ ul {
   margin-top: 0.5rem;
 }
 
+@media screen and (max-width: 767px) {
+  .container {
+    height: 600px;
+    width: 302px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+  }
+
+  .overlay {
+    background-image: url("./images/image-header-mobile.jpg");
+  }
+}
+
