--- a/style.css
+++ b/style.css
@@ -101,16 +101,18 @@ ul {
 }
 
 @media screen and (max-width: 767px) {
-  .container {
-    height: 600px;
+  main {
     width: 302px;
+    height: 600px;
     display: flex;
     flex-direction: column-reverse;
     justify-content: flex-end;
+    background-color: var(--card-background);
   }
 
   .overlay {
     background-image: url("./images/image-header-mobile.jpg");
+    width: 100%;
   }
 }
 
