--- a/style.css
+++ b/style.css
@@ -101,18 +101,26 @@ ul {
 }
 
 @media screen and (max-width: 767px) {
-  main {
-    width: 302px;
+
+  .container {
     height: 600px;
-    display: flex;
+    width: 302px;
     flex-direction: column-reverse;
-    justify-content: flex-end;
-    background-color: var(--card-background);
+    flex: grid;
+    place-items: center;
+  }
+  
+  picture {
+    min-height: 30%;
+    width: 100%;
+    border-radius: 0.5rem 0.5rem 0 0;
   }
 
   .overlay {
     background-image: url("./images/image-header-mobile.jpg");
-    width: 100%;
+    background-size: cover;
   }
+
+  
 }
 
