trying media query

--- a/style.css
+++ b/style.css
@@ -106,13 +106,13 @@ ul {
     height: 600px;
     width: 302px;
     flex-direction: column-reverse;
-    flex: grid;
-    place-items: center;
+    justify-content: center;
+    align-items: center;
   }
   
   picture {
     min-height: 30%;
-    width: 100%;
+    min-width: 100%;
     border-radius: 0.5rem 0.5rem 0 0;
   }
 
@@ -120,7 +120,7 @@ ul {
     background-image: url("./images/image-header-mobile.jpg");
     background-size: cover;
   }
-
+  
   
 }
 
